# domain-driven-design-service-examples

./: .gitignore  LICENSE  README.md
python/fastapi/entity-service/: pyproject.toml
python/fastapi/entity-service/alembic/: env.py
python/fastapi/entity-service/alembic/versions/: 00000001_entity_tables.py
python/fastapi/entity-service/api/: config.local.yaml  main.py
python/fastapi/entity-service/api/application/entity_aggregate/: entity_handler.py  entity_router.py
python/fastapi/entity-service/api/application/health/: health_handler.py
python/fastapi/entity-service/api/domain/entity_aggregate/: entity.py  entity_repo.py  entity_service.py
python/fastapi/entity-service/api/domain/utils/: datetime_utils.py  pydantic_utils.py
python/fastapi/entity-service/api/infrastructure/datastore/postgres/: tables.py
python/fastapi/entity-service/api/infrastructure/entity_aggregate/: entity_repo.py  entity_repo_adapter.py
python/fastapi/entity-service/api/tests/: conftest.py
python/fastapi/entity-service/api/tests/stubs/entity_aggregate/: entity.py
python/fastapi/entity-service/api/tests/test_infrastructure/test_datastore/test_entity_aggregate/: test_entity_repo.py
python/fastapi/order-service/: .flake8  .isort.cfg  README.md  pyproject.toml  tox.ini
python/fastapi/order-service/api/orders/: main.py
python/fastapi/order-service/api/orders/domain/order_aggregate/: order.py  order_repo.py  order_service.py
rust/actix/order-service/: Cargo.toml
rust/actix/order-service/src/: main.rs
rust/actix/order-service/src/application/server/: health_handler.rs  mod.rs
rust/actix/order-service/src/domain/: mod.rs
rust/actix/order-service/src/domain/order_aggregate/: order.rs  order_repo.rs
