[tool.poetry]
name = "domain-driven-design-service-examples-python-fastapi-order-service"
version = "0.1.0a0"
description = ""
authors = ["francoposa <franco@francoposa.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
# Linters and Formatters should always float to the next version without restriction
black = "*"
flake8 = "*"
ipython = "*"
isort = "*"
mypy = "*"
pylint = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
