[package]
name = "order-service"
version = "0.1.0-alpha.0"
description = ""
authors = ["francoposa <franco@francoposa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2"
actix-web = "3"
async-trait = "0.1"
chrono = "0.4"
rust_decimal = "1"
rust_decimal_macros = "1"
serde = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }